@@ -10,7 +10,6 @@ bin/npg_pipeline_seqchksum_comparator
 bin/script_must_be_unique_runner
 Build.PL
 Changes
-data/config_files/external_script_names.ini
 data/config_files/function_orders.yml
 data/config_files/general_values.ini
 data/config_files/illumina_pipeline.ini
