@@ -1,6 +1,0 @@
-auto_qc_loader=npg_qc_autoqc_data.pl
-fastqcheck_loader=npg_qc_save_files.pl
-illumina_analysis_qc_loader=npg_qc_illumina_analysis_loader
-split_fastq_by_tag_script=split_fastq_by_tag.pl
-qc_script=qc
-archive_to_irods=irods_bam_loader.pl
